--- a/package.json
+++ b/package.json
@@ -9,13 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.10",
+    "lucide-react": "^0.479.0",
+    "next": "15.2.1",
+    "nodemailer": "^6.10.0",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "slugify": "^1.6.6",
+    "swiper": "^11.2.5",
+    "tailwindcss": "^4.0.10",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "eslint-config-next": "15.2.1"
   }
 }
