--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-   "engines": {
+  "engines": {
     "node": "18.x"
   },
   "scripts": {
@@ -13,16 +13,18 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.10",
+    "framer-motion": "^12.6.2",
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "slugify": "^1.6.6",
-    "swiper": "^11.2.5",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.0.10",
     "uuid": "^11.1.0"
   },
